--- a/photo2tiles/MainWindow.xaml
+++ b/photo2tiles/MainWindow.xaml
@@ -26,14 +26,14 @@
                Grid.Column="0"
                Grid.Row="0"
                Margin="5, 5, 5, 5"
-               Visibility="Collapsed" />
+               Visibility="Collapsed"/>
 
 
         <StackPanel Grid.Column="1"
                     Grid.Row="0"
                     Orientation="Vertical">
 
-            <GroupBox Margin="5, 5, 5, 5"
+            <!--GroupBox Margin="5, 5, 5, 5"
                       Header="Карта">
                 <StackPanel Orientation="Horizontal">
 
@@ -44,11 +44,11 @@
                                  MaxLength="20"
                                  MinWidth="100"/>
                 </StackPanel>
-            </GroupBox>
+            </GroupBox-->
 
             <GroupBox Margin="5, 5, 5, 5"
                       Header="Система координат">
-                <StackPanel Orientation="Horizontal">
+                <StackPanel Orientation="Vertical">
                     <RadioButton Name="wgs84_rb" Margin="5, 5, 0, 5" Checked="RB_Checked">WGS-84</RadioButton>
                     <RadioButton Name="pz90_rb"  Margin="5, 5, 0, 5" Checked="RB_Checked">ПЗ-90</RadioButton>
                     <RadioButton Name="pul42_rb" Margin="5, 5, 0, 5" Checked="RB_Checked">Пулково-42</RadioButton>
@@ -111,7 +111,7 @@
                          Margin="5, 5, 0, 0" />
 
 
-                    <Label Content="Нижний левый:"
+                    <Label Content="Левый нижний:"
                        Grid.Column="0"
                        Grid.Row="3" />
 
@@ -126,7 +126,7 @@
                          Margin="5, 5, 0, 0" />
 
 
-                    <Label Content="Нижний правый:"
+                    <Label Content="Правый нижний:"
                        Grid.Column="0"
                        Grid.Row="4" />
 
